--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 
 stages:
   - name: sentinel
-    if: branch != master OR type = pull_request
+    if: branch = master
   - test
   - moban
   - name: unsupported
@@ -50,8 +50,11 @@ jobs:
       python: 3.6
       if: branch = master AND type = push
 
-    # OSX build removed due to long build startup delays
-    # Restore matrix job entry from d2d67fab to test OSX
+    - os: osx
+      sudo: true
+      python: 3.7.4
+      stage: test
+
     - python: 2.7
       <<: *disable_global
       stage: unsupported
